// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`buildRoutes > from 0 modules 1`] = `undefined`;

exports[`buildRoutes > from 1 module 1`] = `
{
  "modules": [
    {
      "fileName": "_layout.tsx",
      "id": "src/_layout.tsx",
      "load": [Function],
    },
  ],
  "path": "/",
}
`;

exports[`buildRoutes > from 2 parent-child modules 1`] = `
{
  "modules": [
    {
      "fileName": "_layout.tsx",
      "id": "src/_layout.tsx",
      "load": [Function],
    },
  ],
  "path": "/",
  "tree": [
    {
      "modules": [
        {
          "fileName": "_layout.tsx",
          "id": "src/abc/_layout.tsx",
          "load": [Function],
        },
      ],
      "path": "/abc",
    },
  ],
}
`;
